<resources>
    <string name="app_name">Gay City</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about_gay_city">About Gay City</string>
    <string name="our_vision">Our Vision</string>
    <string name="vision_description">Gay City is the definitive hub for LGBTQ individuals seeking affirming and responsive resources, wellness, and community.</string>
    <string name="our_mission">Our Mission</string>
    <string name="mission_description">Gay City: Seattle’s LGBTQ Center cultivates access and connections to promote self&#8211;determination, liberation and joy in our communities.</string>
    <string name="our_values">Our Values</string>
    <string name="advocacy">Advocacy</string>
    <string name="advocacy_description">Gay City: Seattle’s LGBTQ Center cultivates access and connections to promote self&#8211;determination, liberation and joy in our communities.</string>
    <string name="accessibility">Accessibility</string>
    <string name="accessibility_description">Gay City: Seattle’s LGBTQ Center cultivates access and connections to promote self&#8211;determination, liberation and joy in our communities.</string>
    <string name="intersectionality">Intersectionality</string>
    <string name="Intersectionality_description">We recognize that our community members are multifaceted, with overlapping and intersecting identities. We seek to honor our interdependent identities in all our services and programming. We also recognize that LGBTQ communities face multiple and intersecting forms of structural oppression. We are committed to honoring those truths in all that we do.</string>
    <string name="sex_and_body_positivity">Sex and Body Positivity</string>
    <string name="positivity_description">Gay City values all bodies and consensual sexuality. We defer judgment when people seek support or share their diverse stories and invest in people’s self&#8211;determination.</string>
    <string name="stewardship">Stewardship</string>
    <string name="strewardship_description">Gay City takes community seriously. We act in service of people’s daily needs, and towards our greater liberation, as they are not separate. We know the power of community and take great care in building it for today and generations to come.</string>
    <string name="transparency">Transparency</string>
    <string name="transparancy_description">Gay City sees transparency being key in creating equitable outcomes and getting people what they need to be successful. We have established policies, procedures, and practices with the intent to be clear and open with the communities we serve.</string>
    <string name="our_history">Our History</string>
    <string name="history_description">2020 marks Gay City’s 25th year of building resilience and joy in LGBTQ communities. <br />In 1995, a group of community activists launched Gay City with a bold vision of building a community stronger than HIV while centering queer voices. This mission evolved in the 2000s when the organization introduced its Wellness Center, Arts Programs, and established a physical space where all LGBTQ people could be themselves. <br />Today, Gay City remains the leading HIV/STI tester in King County, home to several LGBTQ&#8211;affirming services, and provides access to hundreds of resources. The organization is also an active force in queer youth engagement and provides LGBTQ&#8211;centered trainings that address the needs of the most marginalized people within our community.</string>
    <string name="register_now">Register now</string>
    <string name="learn_more">Learn more</string>
    <string name="popup_content_description">in image for the back of the popup</string>
    <string name="popup_x_content_description">an x image to exit the popup</string>
    <string name="phone">PHONE</string>
    <string name="website">WEBSITE</string>
    <string name="resources_availability">RESOURCES AVAILABILITY</string>
    <string name="services_availability">SERVICES AVAILABILITY</string>
    <string name="services_and_resources">SERVICES AND RESOURCES</string>
    <string name="values">VALUES</string>
    <string name="vision">VISION</string>
    <string name="mission">MISSION</string>
    <string name="email">EMAIL</string>
    <string name="communities">COMMUNITIES</string>
    <string name="basic_needs_supports">BASIC NEEDS SUPPORTS</string>
    <string name="access_needs">ACCESS NEEDS</string>
    <string name="trans_and_gender_non_conforming_affirming_services">TRANS AND GENDER NON&#8211;CONFORMING AFFIRMING SERVICES</string>
    <string name="bipoc_lgbtq_affirming_services">BIPOC LGBTQ+ AFFIRMING SERVICES</string>
    <string name="lgbtq_youth_affirming_services">LGBTQ+ YOUTH AFFIRMING SERVICES</string>
    <string name="lgbtq_adult_affirming_services">LGBTQ+ ADULT AFFIRMING SERVICES</string>
    <string name="wait_for_the_election_results">Wait for the Election Results</string>
    <string name="_08">08</string>
    <string name="create_a_backup_plan">Create a Backup Plan</string>
    <string name="track_ballot_now">Track Ballot Now</string>
    <string name="_10_ways_to_prepare_for_an_election">10 WAYS TO PREPARE FOR AN ELECTION</string>
    <string name="_10_ways_to_prepare_for_an_election_description">Here are ten ways to prepare for any upcoming election. The tips may differ depending on the city, county and state where you live, so we have included some national resources for those that live outside King County (Washington State). <br />If at any point you need help (accessibility concerns or otherwise), contact your local elections office for help: <br />• King County (WA): 206&#8211;296&#8211;vote <br />• United States: 1&#8211;866&#8211;OUR&#8211;VOTE or 888&#8211;VE&#8211;Y&#8211;VOTA. <br />Please share any election preparation tips you have to communications@gaycity.org.</string>
    <string name="_01">01</string>
    <string name="are_you_eligible_to_vote">Are you Eligible to Vote?</string>
    <string name="eligible_description">To register to vote in the state of Washington, you must be: <br />• A citizen of the United States <br />• A legal resident of Washington state for at least 30 days prior to election day <br />• At least 18 years old by election day <br />• Not disqualified from voting due to a court order <br />• Not under Department of Corrections supervision for a Washington felony conviction <br />Not 18 years old? <br />If you meet all of the requirements, except you’re 16 or 17, you can pre&#8211;register to vote. Your registration will be held by the elections office until you become eligible to vote.</string>
    <string name="check_registration">Check REgistration</string>
    <string name="_03">03</string>
    <string name="register_to_vote">Register to Vote</string>
    <string name="track_your_ballot">Track Your Ballot</string>
    <string name="_07">07</string>
    <string name="voter_elgibility">Voter Elgibility</string>
    <string name="_02">02</string>
    <string name="check_your_voter_registration">Check Your Voter Registration</string>
    <string name="voter_registration_description">Whether you registered last year or recently registered, make sure your registration was processed correctly – verify your name and address. <br />Sometimes people are purged from the rolls or simple computer glitches, so we encourage you to take a few minutes to check your registration.</string>
    <string name="register_to_vote_description">Unable to find your registration in the polls? Does your registration have your dead name, but your ID have your real name? Has your address changed? <br />These are just some of the reasons to register to vote. <br />Here are the things you need to register: <br />• Complete a voter registration card online, in person, or print and mail it to the elections office. <br />• King County (Washington State) | Provide a copy of an approved ID: <br />• Driver’s license <br />• State ID card <br />• Student ID card <br />• Tribal ID card <br />• Employer ID card <br />• Outside King County | Provide a copy of an approved ID: <br />• Learn more at voteriders.org.</string>
    <string name="complete_voter_registration">Complete voter registration</string>
    <string name="_04">04</string>
    <string name="request_an_early_vote_absentee_ballot">Request an Early Vote (Absentee) Ballot</string>
    <string name="absentee_ballot_description">Contact your local elections office to request a printed vote early ballot or to vote online. <br />Even in the few states where ballots are sent automatically, you should still ensure your ballot has been sent and when to expect it. Sometimes there are computer glitches or mailing issues that arise, and you don’t want that to keep you from voting. <br />In King County (Washington State) you can call (206) 296&#8211;VOTE. <br />Outside King County you can call 1&#8211;866&#8211;OUR&#8211;VOTE.</string>
    <string name="_05">05</string>
    <string name="do_your_research">Do Your Research</string>
    <string name="do_your_research_description">You’re halfway there to completing the your preparation for the election. But, this is one of the biggest steps of them all – know what you’re voting for. <br />Here are some ways to research the candidates and the referendums: <br />• Vote411 <br />• Ballotpedia <br />• Contact the candidates and their party to ask your questions <br />• Read articles from trusted media sources who cite their sources or have media that is moderately edited</string>
    <string name="_06">06</string>
    <string name="follow_all_ballot_instructions">Follow All Ballot Instructions</string>
    <string name="back">back</string>
    <string name="vote_for_visibility">Vote for Visibility</string>
    <string name="vote_for_visibility_description">For the past 14 years, LGBTQ people have proportionately voted at lower rates than non&#8211;LGBTQ+ voters. It’s our elected officials who will approve education, employment, and health care bills that affect our communities. They will determine how to use the census data to influence the resources we need in our community. <br />This year, join us at the polls. Stand with your community and fight for an affirming, queer&#8211;inclusive world. <br />Let’s vote and increase LGBTQ+ visibility at the polls.</string>
    <string name="_10_ways_to_prep_for_an_election">10 Ways to Prep for an Election</string>
    <string name="_10_ways_to_prepare_description">We’re consistently being hit with misinformation and voter suppression tricks. Time to counter it with our own tactic – knowledge – with 10 ways to prep before visiting the polls or requesting your ballot.</string>
    <string name="request_absentee_ballot">Request Absentee Ballot</string>
    <string name="change_address">Change Address</string>
    <string name="accessible_voting">Accessible Voting</string>
    <string name="image_in_vote_for_visibility_tab">image in vote for visibility tab</string>
</resources>